--- a/CozinhaConsumidor/appsettings.json
+++ b/CozinhaConsumidor/appsettings.json
@@ -13,9 +13,7 @@
 
   "MassTransit": {
     "Queues": {
-      "PedidoCadastroQueue": "filaCadastroPedido",
-      "PedidoCancelamentoQueue": "filaCancelamentoPedido",
-      "PedidoExclusaoQueue": "filaExclusaoPedido"
+      "PedidoAtualizacaoStatusQueue": "filaAtualizacaoStatusPedido"
     },
     "Server": "localhost",
     "User": "guest",
