--- a/CozinhaProdutor/appsettings.json
+++ b/CozinhaProdutor/appsettings.json
@@ -15,9 +15,7 @@
 
   "MassTransit": {
     "Queues": {
-      "PedidoCadastroQueue": "filaCadastroPedido",
-      "PedidoCancelamentoQueue": "filaCancelamentoPedido",
-      "PedidoExclusaoQueue": "filaExclusaoPedido"
+      "PedidoAtualizacaoStatusQueue": "filaAtualizacaoStatusPedido"
     },
     "Server": "localhost",
     "User": "guest",
