Desenvolvimento dos testes unitários

--- a/CozinhaProdutor/appsettings.json
+++ b/CozinhaProdutor/appsettings.json
@@ -20,6 +20,10 @@
     "Server": "localhost",
     "User": "guest",
     "Password": "guest"
+  },
+
+  "Jwt": {
+    "Secret": "SuperChaveUltraSeguraComMaisDe32Caracteres"
   }
 
 }
